--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -10,7 +10,8 @@ const posts = (await getCollection('blog')).sort(
 const last_posts = posts.slice(0, 3);
 ---
 
-<BaseLayout>
+<BaseLayout title = "Contact - David Lopez Rodriguez">
+
 
  <div class="py-8"><text class="text-lg"> <p align="justify">   <b> David Lopez Rodriguez  </b> </p> </text> </div>
 
