--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -7,30 +7,32 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div> <div class="text-2xl w-full font-bold mb-0">PhD thesis</div> </div>
   
   <div class="divider my-0"></div><p align="justify">
+  <a href="https://explore.lib.uliege.be/permalink/32ULG_INST/1iujq0/alma9921156576402321" target="_blank">
  <text class="text-lg"> <u>Lopez-Rodriguez D</u>. Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation. GIGA-Neurosciences. University of Liège. Advisor: Prof. Anne-Simone Parent. </text>
- </p>
+ </p></a>
+ <a href="https://drive.google.com/file/d/1krHdJQaA7Nar19DszodyQN1ibO5Vkfa7/view?usp=share_link" target="_blank"><text class="text-lg"> <b>Download</b> </text></p></a>
 
     <div class="text-2xl w-full font-bold mb-0 mt-10">Peer-reviewed scientific articles</div>
   <div class="divider my-0"></div>
  
- <div class="text-lg"> <p align="justify"> Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. <b>Frontiers in Endocrinology</b>. 2023. April 3; 14. https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full  </div>
- </p><br>
-<div class="text-lg"><p align="justify"><u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F. Ontogeny of ependymoglial cells lining the third ventricle in mice. <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759. https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full  </div>
-</p><br>
-<div class="text-lg"><p align="justify"> <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat. <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003. https://pubmed.ncbi.nlm.nih.gov/34383603/.  </div>
-</p><br>
-<div class="text-lg"> <p align="justify"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. Cellular and molecular features of EDC exposure: consequences for the GnRH network. <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96. https://www.nature.com/articles/s41574-020-00436-3.  </div>
-</p><br>
-<div class="text-lg"> <p align="justify"><u>Lopez-Rodriguez D</u>, Franssen D, Sevrin E, Gérard A, Balsat C, Blacher S, Noël A, Parent AS. Persistent vs Transient Alteration of Folliculogenesis and Estrous Cycle After Neonatal vs Adult Exposure to Bisphenol A. <b>Endocrinology</b> 160, 2558–2572 (2019).  https://pubmed.ncbi.nlm.nih.gov/31503316/. </div>
-</p><br>
-<div class="text-lg"><p align="justify"> <u>Lopez-Rodriguez D</u>, Franssen D, Heger S, Parent AS. <b>Endocrine-disrupting chemicals and their effects on puberty</b>. Best Pract Res Clin Endocrinol Metab</b>. 2021 Sep;35(5):101579. https://www.sciencedirect.com/science/article/abs/pii/S1521690X21000968. </div>
-</p><br>
-<div class="text-lg"><p align="justify"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS. A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals. <b>Neuroendocrinology</b>. 2021 Feb 26. https://www.karger.com/Article/FullText/515478. </div>
-</p><br>
-<div class="text-lg"><p align="justify"> Fudvoye J, <u>Lopez-Rodriguez D</u>, Franssen D, Parent AS. Endocrine disrupters and possible contribution to pubertal changes. <b>Best Pract Res Clin Endocrinol Metab</b>. 2019 Jun;33(3):101300.https://www.sciencedirect.com/science/article/pii/S1521690X1930051X?via%3Dihub</div>
-</p><br>
-<div class="text-lg"> <p align="justify">Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands. <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014).  https://pubmed.ncbi.nlm.nih.gov/25017494/. </div>
-</p>
+ <div class="text-lg"> <p align="justify"> <a href="https://www.frontiersin.org/articles/10.3389/fendo.2023.1140886/full" target="_blank">   Franssen D, Johansson H, <u>Lopez-Rodriguez D</u>, Lavergne A, Terwagne Q, Boberg J, Christiansen S, Svingen T, Parent AS. Perinatal exposure to the fungicide ketoconazole alters hypothalamic control of puberty in female rats. <b>Frontiers in Endocrinology</b>. 2023. April 3; 14.  </div>
+ </p></a><br>
+<div class="text-lg"><p align="justify"><a href="https://www.frontiersin.org/articles/10.3389/fendo.2022.1073759/full" target="_blank">   <u>Lopez-Rodriguez D</u>, Rohrbach A, Lanzillo M, Gervais M, Croizier S, Langlet F. Ontogeny of ependymoglial cells lining the third ventricle in mice. <b>Frontiers in Endocrinology</b>. 2023 Jan 5; 13:1073759  </div>
+ </p></a><br>
+<div class="text-lg"><p align="justify"><a href="https://ehp.niehs.nih.gov/doi/10.1289/EHP8795" target="_blank"> <u>Lopez-Rodriguez D</u>, Aylwin CF, Delli V, Sevrin E, Campanile M, Martin M, Franssen D, Gérard A, Blacher S, Tirelli E, Noël A, Lomniczi A, Parent AS. Multi- and Transgenerational Outcomes of an Exposure to a Mixture of Endocrine-Disrupting Chemicals (EDCs) on Puberty and Maternal Behavior in the Female Rat. <b>Environ Health Perspect</b>. 2021 Aug;129(8):87003  </div>
+ </p></a><br>
+<div class="text-lg"> <p align="justify"><a href="https://www.nature.com/articles/s41574-020-00436-3" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Bakker J, Lomniczi A, Parent AS. Cellular and molecular features of EDC exposure: consequences for the GnRH network. <b>Nature Reviews Endocrinology</b>. 2021 Feb;17(2):83-96  </div>
+ </p></a><br>
+<div class="text-lg"> <p align="justify"><a href="https://academic.oup.com/endo/article/160/11/2558/5565236?login=false" target="_blank"><u>Lopez-Rodriguez D</u>, Franssen D, Sevrin E, Gérard A, Balsat C, Blacher S, Noël A, Parent AS. Persistent vs Transient Alteration of Folliculogenesis and Estrous Cycle After Neonatal vs Adult Exposure to Bisphenol A. <b>Endocrinology</b> 160, 2558–2572 (2019) </div>
+ </p></a><br>
+<div class="text-lg"><p align="justify"><a href="https://www.sciencedirect.com/science/article/abs/pii/S1521690X21000968" target="_blank"> <u>Lopez-Rodriguez D</u>, Franssen D, Heger S, Parent AS. <b>Endocrine-disrupting chemicals and their effects on puberty</b>. Best Pract Res Clin Endocrinol Metab</b>. 2021 Sep;35(5):101579 </div>
+ </p></a><br>
+<div class="text-lg"><p align="justify"><a href=" https://www.karger.com/Article/FullText/515478" target="_blank"> Franssen D, Svingen T, <u>Lopez-Rodriguez D</u>, Van Duursen M, Boberg J, Parent AS. A putative adverse outcome pathway network for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals. <b>Neuroendocrinology</b>. 2021 Feb 26 </div>
+ </p></a><br>
+<div class="text-lg"><p align="justify"><a href="https://www.sciencedirect.com/science/article/pii/S1521690X1930051X?via%3Dihub" target="_blank"> Fudvoye J, <u>Lopez-Rodriguez D</u>, Franssen D, Parent AS. Endocrine disrupters and possible contribution to pubertal changes. <b>Best Pract Res Clin Endocrinol Metab</b>. 2019 Jun;33(3):101300</div>
+ </p></a><br>
+<div class="text-lg"> <p align="justify"><a href="https://pubmed.ncbi.nlm.nih.gov/25017494/" target="_blank">Sanchez CR, Ramos C, Díaz F, <u>Lopez D</u>. Attention-Deficit/Hyperactivity Disorder: prevalence of risk in the scholastic scope of the Canary islands. <b>Actas Esp Psiquiatr</b> 42, 169–175 (2014) </div>
+ </p></a>
     <div class="text-2xl w-full font-bold mb-0 mt-10">Press releases </div>
   <div class="divider my-0"></div>
 
