--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -3,7 +3,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 import HorizontalCard from "../components/HorizontalCard.astro";
 ---
 
-<BaseLayout title = "Projects">
+<BaseLayout title = "Projects - David Lopez Rodriguez">
+
 
  <div>
           <div class="text-3xl w-full font-bold mb-2">Current projects </div>
@@ -37,7 +38,14 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 <div>
           <div class="text-3xl w-full font-bold mb-2">Past projects </div>
         </div>
-        	<li><a id="p1" href="/p1/">BLABLI</a></li>
+
+         <HorizontalCard
+          title="Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation"
+          img="/Thesis.jpg"
+          desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty"
+          id="p1" 
+          url="/p1/"
+        />
    
   ...Ongoing...
 
