--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -42,7 +42,8 @@ const last_posts = posts.slice(0, 3);
           title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
           img="/EDCs.webp"
           desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
-          url="#"
+          id="p1" 
+          url="/p1/"
         />
         <div class="divider my-0"></div>
         <HorizontalCard
