--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,7 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-5 text-justify">
-    Experienced and multidisciplinar scientist with a background in toxicology, biology, environmental and computational sciences. 
+    Experienced and multidisciplinary scientist with a background in toxicology, biology, environmental and computational sciences. 
     Skilled in bioinformatics, computational biology and chemoinformatics with a demonstrated history of working in academia. 
     Proficient in python, R, version control, among others. 
   </div>
@@ -76,7 +76,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
     />
     <TimeLineElement
       title="PhD in Biomedical Sciences"
-      subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium  blabla" 
+      subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium" 
     />
     <TimeLineElement
       title="M.Sc. in Neuroscience and Behavioral Psychopharmacology"
@@ -150,7 +150,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
 
 
    <div class="mb-5">
-    <div class="text-3xl w-full font-bold">Peer-reviewingy</div>
+    <div class="text-3xl w-full font-bold">Peer-reviewing</div>
   </div>
   <ul class="list-disc mx-6 mb-10 grid gap-2">
    <li>
