--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -44,7 +44,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
           img="/Thesis.jpg"
           desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty"
           id="p1" 
-          url="/p1/"
+          url="#"
         />
    
   ...Ongoing...
