--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -79,7 +79,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
       subtitle= "2016 to 2020 at University of Liege (ULIEGE), Belgium" 
     />
     <TimeLineElement
-      title="M.Sc. in Neuroscience and Behavioral Psychopharmacology"
+      title="M.Sc. in Psychology, Cognition and Experimental Neuroscience"
       subtitle="2013 to 2015 at University of Liege (ULIEGE), Belgium"
     />
        <TimeLineElement
