--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -28,7 +28,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
  <li>Chemo-informatics</li>
     <li>Physiology</li>
     <li>R (RStudio)</li>
-    <li>Pyhton (Anaconda, PyCharm)</li>
+    <li>Python (Anaconda, PyCharm)</li>
     <li>UNIX</li>
     <li>High-perf. computing (HPC)</li>
     <li>Machine learning</li>
