--- a/src/components/SideBar.astro
+++ b/src/components/SideBar.astro
@@ -98,7 +98,7 @@
 				</svg>
 			</a>
 
-			<a href="https://www.unil.ch/dsb/home/menuinst/groupes-de-recherche/fanny-langlet.html" target="_blank" class="mx-3" aria-label="UNIL" title="UNIL">
+			<a href="https://wp.unil.ch/langletlab/" target="_blank" class="mx-3" aria-label="UNIL" title="UNIL">
 				<svg
 				  xmlns="http://www.w3.org/2000/svg"
 				  width="24"
