--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -87,7 +87,7 @@ const last_posts = posts.slice(0, 3);
 
 
 <div class="social-icons px-6 my-2 py-2 flex">
-			<a href="https://www.unil.ch/dsb/home/menuinst/groupes-de-recherche/fanny-langlet.html" target="_blank" class="mx-3" aria-label="Lausanne University" title="Lausanne University">
+			<a href="https://wp.unil.ch/langletlab/" target="_blank" class="mx-3" aria-label="Lausanne University" title="Lausanne University">
 				<svg
 				  xmlns="http://www.w3.org/2000/svg"
 				  width="24"
@@ -98,7 +98,7 @@ const last_posts = posts.slice(0, 3);
 					<path d="M12 0C5.372 0 0 5.372 0 12s5.372 12 12 12 12-5.372 12-12S18.628 0 12 0zM7.369 4.378c.525 0 .947.431.947.947s-.422.947-.947.947a.95.95 0 0 1-.947-.947c0-.525.422-.947.947-.947zm-.722 3.038h1.444v10.041H6.647V7.416zm3.562 0h3.9c3.712 0 5.344 2.653 5.344 5.025 0 2.578-2.016 5.025-5.325 5.025h-3.919V7.416zm1.444 1.303v7.444h2.297c3.272 0 4.022-2.484 4.022-3.722 0-2.016-1.284-3.722-4.097-3.722h-2.222z"></path>
 					<circle cx="6" cy="18" r="2"></circle>
 				</svg>
-				<a href="https://www.unil.ch/dsb/home/menuinst/groupes-de-recherche/fanny-langlet.html"><b> Lausanne University </b></a>
+				<a href="https://wp.unil.ch/langletlab/"><b> Lausanne University </b></a>
 			</a>
 </div>
 
