--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -72,7 +72,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   <div class="time-line-container grid gap-4 mb-10">
      <TimeLineElement
       title="Micro-bachelor degree (60 ECTS) in Sustainability and Strategies Against Climate Change"
-      subtitle="2016 to 2023 at UNED, Spain"
+      subtitle="2023-Today at UNED, Spain"
     />
     <TimeLineElement
       title="PhD in Biomedical Sciences"
