--- a/src/pages/Contact.astro
+++ b/src/pages/Contact.astro
@@ -139,7 +139,7 @@ const last_posts = posts.slice(0, 3);
 
 
 <div class="py-20"></div>
- <div class="py-0"><text class="text-lg"> <p align="justify">    Website created in Github & VisualStudio using <b>Astro </b> </p> </text> </div>
+ <div class="py-0"><text class="text-lg"> <p align="justify">    Website created in Github & VisualStudio using <a href="https://astro.build/"><b>Astro<a>  </b> </p> </text> </div>
 
 
 
