--- a/src/pages/cv.astro
+++ b/src/pages/cv.astro
@@ -9,9 +9,7 @@ import TimeLineElement from "../components/cv/TimeLine.astro";
   </div>
 
   <div class="mb-5 text-justify">
-    Experienced and multidisciplinary scientist with a background in toxicology, biology, environmental and computational sciences. 
-    Skilled in bioinformatics, computational biology and chemoinformatics with a demonstrated history of working in academia. 
-    Proficient in python, R, version control, among others. 
+    Experienced and multidisciplinary scientist with a background in toxicology, biology, environmental and computational sciences. My main objective is to develop computational and bioinformatic tools that can expand scientific knowledge and make a valuable contribution to public health and society. 
   </div>
 
   <div class="mb-10">
