--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -20,18 +20,21 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         
         <div class="divider my-0"></div>
         <HorizontalCard
-        title="Sex dimorphism and temporal dynamics of the tanycyte connectome according to changes in metabolic state"
-        img="/Tanycytes.webp"
-        desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        url="#"
-      />
+          title="Temporal dynamics of the tanycyte connectome according to changes in metabolic state"
+          img="/Tanycytes.webp"
+          desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
+          id="p2" 
+          url="/p2/"
+        />
+
         <div class="divider my-0"></div>
-        <HorizontalCard
-        title="Single-cell heterogeneity and plasticity of 3V ependyma during energy imbalance"
-        img="/Tanycytes2.webp"
-        desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        url="#"
-      />
+       <HorizontalCard
+          title="Deciphering the heterogeneity and plasticity of ependymoglial cells during energy imbalance"
+          img="/EDCs.webp"
+          desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
+          id="p3" 
+          url="/p3/"
+        />
 
 </div>
 
@@ -40,14 +43,60 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         </div>
 
          <HorizontalCard
-          title="Direct, multi- and transgenerational effects of endocrine disruptors on maternal behavior and female sexual maturation"
-          img="/Thesis.jpg"
-          desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty"
-          id="p1" 
-          url="#"
+          title="The ontogeny of ependymoglial cells"
+          img="/EDCs.webp"
+          desc="Keywords: Neuroendocrinology, Neuroscience, Bioinformatics, Hypothalamus, Development"
+          id="p4" 
+          url="/p4/"
         />
-   
-  ...Ongoing...
+        <div class="divider my-0"></div>
+        <HorizontalCard
+                  title="An Adverse Outcome Pathway (AOP) for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals"
+                  img="/EDCs.webp"
+                  desc="Keywords:  Adverse outcome pathway, Endocrine Disruption, Puberty, Reproduction, Risk Assessment"
+                  id="p5" 
+                  url="/p5/"
+                />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+                  title="Placental biomarkers of a developmental exposure to the Endocrine Disruptor Bisphenol S"
+                  img="/EDCs.webp"
+                  desc="Keywords: Endocrine Disruption, Toxicology, Placenta, Reproduction, Bioinformatics"
+                  id="p6" 
+                  url="/p6/"
+                />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+                  title="Cellular and molecular features of EDC exposure"
+                  img="/EDCs.webp"
+                  desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH"
+                  id="p7" 
+                  url="/p7/"
+                />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+                  title="The transgenerational reproductive effects of mixtures of Endocrine Disrupting Chemicals"
+                  img="/EDCs.webp"
+                  desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty, Maternal Behavior"
+                  id="p8" 
+                  url="/p8/"
+                />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+                  title="The effects of the Endocrine Disruptor Bisphenol A on puberty and reproduction"
+                  img="/EDCs.webp"
+                  desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty"
+                  id="p9" 
+                  url="/p9/"
+                />
+        <div class="divider my-0"></div>
+        <HorizontalCard
+                  title="The prevalence of the Attention Deficit Hyperactivity Disorder in the Canary Island"
+                  img="/EDCs.webp"
+                  desc="Keywords: Psychology, childrens, TDAH, psychiatric disorders"
+                  id="p10" 
+                  url="/p10/"
+                />
 
 </div>
 
