--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -21,7 +21,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
           title="Temporal dynamics of the tanycyte connectome according to changes in metabolic state"
-          img="/Tanycytes.webp"
+          img="/Connectome.png"
           desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
           id="p2" 
           url="/p2/"
