--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -30,7 +30,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
        <HorizontalCard
           title="Deciphering the heterogeneity and plasticity of ependymoglial cells during energy imbalance"
-          img="/EDCs.webp"
+          img="/Pseudospatial.png"
           desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
           id="p3" 
           url="/p3/"
