--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -52,7 +52,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="An Adverse Outcome Pathway (AOP) for disrupted female pubertal onset to improve testing and regulation of endocrine disrupting chemicals"
-                  img="/EDCs.webp"
+                  img="/AOP.png"
                   desc="Keywords:  Adverse outcome pathway, Endocrine Disruption, Puberty, Reproduction, Risk Assessment"
                   id="p5" 
                   url="/p5/"
