--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -60,7 +60,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="Placental biomarkers of a developmental exposure to the Endocrine Disruptor Bisphenol S"
-                  img="/EDCs.webp"
+                  img="/Placenta.png"
                   desc="Keywords: Endocrine Disruption, Toxicology, Placenta, Reproduction, Bioinformatics"
                   id="p6" 
                   url="/p6/"
