--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -68,7 +68,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="Cellular and molecular features of EDC exposure"
-                  img="/EDCs.webp"
+                  img="/nature.png"
                   desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH"
                   id="p7" 
                   url="/p7/"
