--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -76,7 +76,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="The transgenerational reproductive effects of mixtures of Endocrine Disrupting Chemicals"
-                  img="/EDCs.webp"
+                  img="/epigenetics.png"
                   desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty, Maternal Behavior"
                   id="p8" 
                   url="/p8/"
