--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -84,7 +84,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="The effects of the Endocrine Disruptor Bisphenol A on puberty and reproduction"
-                  img="/EDCs.webp"
+                  img="/BPA.png"
                   desc="Keywords: Endocrine Disruption, Toxicology, Neuroendocrinology, Reproduction, GnRH, Puberty"
                   id="p9" 
                   url="/p9/"
@@ -92,7 +92,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="The prevalence of the Attention Deficit Hyperactivity Disorder in the Canary Island"
-                  img="/EDCs.webp"
+                  img="/Thesis.jpg"
                   desc="Keywords: Psychology, childrens, TDAH, psychiatric disorders"
                   id="p10" 
                   url="/p10/"
