--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -44,7 +44,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
          <HorizontalCard
           title="The ontogeny of ependymoglial cells"
-          img="/ontogeny.png"
+          img="/onto2.png"
           desc="Keywords: Neuroendocrinology, Neuroscience, Bioinformatics, Hypothalamus, Development"
           id="p4" 
           url="/p4/"
