--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -40,7 +40,7 @@ const last_posts = posts.slice(0, 3);
 
         <HorizontalCard
           title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
-          img="/EDCs.webp"
+          img="/Tmap.png"
           desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
           id="p1" 
           url="/p1/"
@@ -48,14 +48,14 @@ const last_posts = posts.slice(0, 3);
         <div class="divider my-0"></div>
         <HorizontalCard
         title="Sex dimorphism and temporal dynamics of the tanycyte connectome according to changes in metabolic state"
-        img="/Tanycytes.webp"
+        img="/Connectome.png"
         desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
         url="#"
       />
         <div class="divider my-0"></div>
         <HorizontalCard
         title="Single-cell heterogeneity and plasticity of 3V ependyma during energy imbalance"
-        img="/Tanycytes2.webp"
+        img="/Pseudospatial.png"
         desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
         url="#"
       />
