--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -12,7 +12,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         
         <HorizontalCard
           title="A framework for identifying and prioritizing the risk asessment of Endocrine Disrupting Chemicals (EDCs)"
-          img="/EDCs.webp"
+          img="/Tmap.png"
           desc="Keywords: Endocrine Disruption, Toxicology, In Silico, QSAR, Machine Learning, NAMs, Risk Assessment, Chemo-informatics, Environmental Science, Adverse outcome pathways (AOPs)"
           id="p1" 
           url="/p1/"
@@ -92,8 +92,8 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <div class="divider my-0"></div>
         <HorizontalCard
                   title="The prevalence of the Attention Deficit Hyperactivity Disorder in the Canary Island"
-                  img="/Thesis.jpg"
-                  desc="Keywords: Psychology, childrens, TDAH, psychiatric disorders"
+                  img="/head.jpg"
+                  desc="Keywords: Psychology, childrens, ADHD, psychiatric disorders"
                   id="p10" 
                   url="/p10/"
                 />
