--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -47,17 +47,19 @@ const last_posts = posts.slice(0, 3);
         />
         <div class="divider my-0"></div>
         <HorizontalCard
-        title="Sex dimorphism and temporal dynamics of the tanycyte connectome according to changes in metabolic state"
+        title="Temporal dynamics of the tanycyte connectome according to changes in metabolic state"
         img="/Connectome.png"
         desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        url="#"
+        id="p2" 
+        url="/p2/"
       />
         <div class="divider my-0"></div>
         <HorizontalCard
-        title="Single-cell heterogeneity and plasticity of 3V ependyma during energy imbalance"
+        title="Deciphering the heterogeneity and plasticity of ependymoglial cells during energy imbalance"
         img="/Pseudospatial.png"
         desc="Keywords: Neurosciences, Energy balance, Bioinformatics, Connectomics, Hypothalamus, Neuroendocrinology"
-        url="#"
+        id="p3" 
+        url="/p3/"
       />
 
 
