--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -93,7 +93,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
         <HorizontalCard
                   title="The prevalence of the Attention Deficit Hyperactivity Disorder in the Canary Island"
                   img="/head.jpg"
-                  desc="Keywords: Psychology, childrens, ADHD, psychiatric disorders"
+                  desc="Keywords: Psychology, Epidemiology, ADHD, Psychiatric Disorders"
                   id="p10" 
                   url="/p10/"
                 />
