--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -44,6 +44,13 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
    <div class="text-2xl w-full font-bold mb-0 mt-10">Articles in the general press</div>
   <div class="divider my-0"></div><p align="justify">
+
+  <div class="social-icons px-6 my-2 py-2 flex">
+		<a href="Press.png" target="_blank" class="mx-3" aria-label="press" title="press">
+				<img src="Press.png" alt="Italian Trulli" width="700" height="800"> </img>
+			</a>
+</div>
+
 <a class="text-lg" href=" https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
 <a class="text-lg" href=" https://www.rtbf.be/info/regions/liege/detail_une-etude-sur-les-perturbateurs-endocriniens-menee-par-des-chercheurs-de-l-universite-de-liege?id=10227016"> RTBF ,</a>
 <a class="text-lg" href=" https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
