--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -46,13 +46,12 @@ import HorizontalCard from "../components/HorizontalCard.astro";
   <div class="divider my-0"></div><p align="justify">
 
   <div class="social-icons px-6 my-2 py-2 flex">
-		<a href="Press.png" target="_blank" class="mx-3" aria-label="press" title="press">
+		<a href="https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/" target="_blank" class="mx-3" aria-label="DailyScience" title="DailyScience">
 				<img src="Press.png" alt="Italian Trulli" width="700" height="800"> </img>
 			</a>
 </div>
 
 <a class="text-lg" href=" https://www.letemps.ch/sciences/infertilite-pesticides-mis-cause"> Le Temps,</a>
-<a class="text-lg" href=" https://www.rtbf.be/info/regions/liege/detail_une-etude-sur-les-perturbateurs-endocriniens-menee-par-des-chercheurs-de-l-universite-de-liege?id=10227016"> RTBF ,</a>
 <a class="text-lg" href=" https://www.lavanguardia.com/vida/20190520/462341188690/las-toxinas-ambientales-pueden-alterar-la-fertilidad-de-generaciones-futuras.html"> La Vanguardia,</a>
 <a class="text-lg" href=" https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/"> Daily science,</a>
 <a class="text-lg" href="https://www.lecho.be/economie-politique/belgique/general/les-polluants-chimiques-perturbent-plusieurs-generations/10128766.html"> L’echo,</a>
