--- a/src/pages/Publications.astro
+++ b/src/pages/Publications.astro
@@ -47,7 +47,7 @@ import HorizontalCard from "../components/HorizontalCard.astro";
 
   <div class="social-icons px-6 my-2 py-2 flex">
 		<a href="https://dailyscience.be/20/05/2019/les-perturbateurs-endocriniens-ont-un-impact-sur-la-reproduction-pendant-plusieurs-generations/" target="_blank" class="mx-3" aria-label="DailyScience" title="DailyScience">
-				<img src="Press.png" alt="Italian Trulli" width="700" height="800"> </img>
+				<img src="/Press.png" alt="DailyScience" width="700" height="800"> </img>
 			</a>
 </div>
 
